--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
+	<classpathentry kind="lib" path="C:/My Files/CS321/Project-1/CS321-p1/junit-platform-console-standalone-1.11.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
